workspace_errors_4.txt
cargo : warning: 
unused import: 
`ZeroKeypairPublic`
At line:1 char:1
+ cargo check 
--workspace --offline 
2>&1 | Out-File 
-FilePath workspace ...
+ ~~~~~~~~~~~~~~~~~~~~~
~~~~~~~~~~~~~~~~~
    + CategoryInfo     
         : NotSpecifi  
  ed: (warning: unus   
 ed...oKeypairPubli    
c`:String) [], Rem    
oteException
    + FullyQualifiedEr 
   rorId : NativeComm  
  andError
 
 --> zero-identity\src\
bundle.rs:5:28
  |
5 | ...r, 
ZeroKeypairPublic},
  |       
^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unuse
d_imports)]` (part of 
`#[warn(unused)]`) on 
by default

warning: unused 
import: `zero_crypto::k
em::MlKem768EncapsKey`
  --> zero-identity\src
\bundle.rs:10:5
   |
10 | use zero_crypto::k
em::MlKem768EncapsKey;
   |     ^^^^^^^^^^^^^^
^^^^^^^^^^^^^^^^^^^^^

warning: unused 
imports: 
`Ed25519SecretKey`, 
`MlKem768DecapsKey`, 
and `X25519SecretKey`
  --> zero-identity\src
\keypair.rs:10:42
   |
10 | 
...:{X25519Keypair, 
X25519PublicKey, 
X25519SecretKey},
   |                   
                   
^^^^^^^^^^^^^^^
11 | ...h::blake2b_256,
12 | ...::{MlKem768Deca
psKey, 
MlKem768EncapsKey, 
MlKem768Keypair},
   |       
^^^^^^^^^^^^^^^^^
13 | 
...n::{Ed25519Keypair, 
Ed25519PublicKey, 
Ed25519SecretKey},
   |                   
                       
^^^^^^^^^^^^^^^^

warning: unused 
imports: 
`ZeroizeOnDrop` and 
`Zeroize`
  --> zero-identity\src
\keypair.rs:16:15
   |
16 | ...::{Zeroize, 
ZeroizeOnDrop};
   |       ^^^^^^^  
^^^^^^^^^^^^^

warning: 
`zero-identity` (lib) 
generated 4 warnings 
(run `cargo fix --lib 
-p zero-identity` to 
apply 4 suggestions)
    Checking 
zero-ratchet v1.0.0 (C:
\Users\Revanth\Download
s\ZERO\zero-ratchet)
    Checking 
zero-transport v1.0.0 (
C:\Users\Revanth\Downlo
ads\ZERO\zero-transport
)
    Checking 
zero-handshake v1.0.0 (
C:\Users\Revanth\Downlo
ads\ZERO\zero-handshake
)
    Checking zero-dht 
v1.0.0 (C:\Users\Revant
h\Downloads\ZERO\zero-d
ht)
error: `<` is 
interpreted as a start 
of generic arguments 
for `u32`, not a 
comparison
   --> zero-ratchet\src
\state.rs:255:38
    |
255 |         if 
self.nr + MAX_SKIP as 
u32 < until {
    |                  
                    ^ 
------- interpreted as 
generic arguments
    |                  
                    |
    |                  
                    
not interpreted as 
comparison
    |
help: try comparing 
the cast value
    |
255 |         if 
self.nr + (MAX_SKIP as 
u32) < until {
    |                  
    +               +

warning: unused 
import: 
`std::sync::Arc`
  --> zero-transport\sr
c\quic.rs:12:5
   |
12 | use 
std::sync::Arc;
   |     ^^^^^^^^^^^^^^
   |
   = note: `#[warn(unus
ed_imports)]` (part of 
`#[warn(unused)]`) on 
by default

error[E0432]: 
unresolved import `zero
_crypto::kdf::hkdf`
  --> zero-handshake\sr
c\noise.rs:17:11
   |
17 |     kdf::{hkdf, 
hkdf_extract, 
hkdf_expand, 
KdfContext},
   |           ^^^^
   |           |
   |           no 
`hkdf` in `kdf`
   |           help: a 
similar name exists in 
the module: `Hkdf`

error[E0432]: 
unresolved import `zero
_crypto::kdf::hkdf`
  --> zero-handshake\sr
c\x3dh.rs:21:11
   |
21 |     kdf::{hkdf, 
KdfContext},
   |           ^^^^
   |           |
   |           no 
`hkdf` in `kdf`
   |           help: a 
similar name exists in 
the module: `Hkdf`

warning: unused 
imports: `Deserialize` 
and `Serialize`
  --> zero-handshake\sr
c\noise.rs:12:13
   |
12 | use 
serde::{Deserialize, 
Serialize};
   |             
^^^^^^^^^^^  ^^^^^^^^^
   |
   = note: `#[warn(unus
ed_imports)]` (part of 
`#[warn(unused)]`) on 
by default

warning: unused 
imports: 
`AEAD_KEY_SIZE`, 
`X25519SecretKey`, 
`X25519SharedSecret`, 
and `blake2b_512`
  --> zero-handshake\sr
c\noise.rs:14:50
   |
14 |     
aead::{decrypt, 
encrypt, AeadKey, 
AeadNonce, 
AEAD_KEY_SIZE},
   |                   
                       
        ^^^^^^^^^^^^^
15 |     
dh::{X25519Keypair, 
X25519PublicKey, 
X25519SecretKey, 
X25519SharedSecret},
   |                   
                       
^^^^^^^^^^^^^^^  
^^^^^^^^^^^^^^^^^^
16 |     
hash::{blake2b_256, 
blake2b_512, 
blake2b_256_multi},
   |                   
      ^^^^^^^^^^^

warning: unused 
import: `zero_identity:
:keypair::ZeroKeypair`
  --> zero-handshake\sr
c\noise.rs:19:5
   |
19 | use zero_identity:
:keypair::ZeroKeypair;
   |     ^^^^^^^^^^^^^^
^^^^^^^^^^^^^^^^^^^^^

warning: unused 
imports: 
`MlKem768Ciphertext` 
and `MlKem768DecapsKey`
  --> zero-handshake\sr
c\x3dh.rs:19:30
   |
19 |     kem::{MlKem768
EncapsKey, 
MlKem768Ciphertext, ml_
kem_768_encapsulate, 
ml_kem_768_decapsulate,
   |                   
           
^^^^^^^^^^^^^^^^^^
20 |            
MlKem768DecapsKey},
   |            
^^^^^^^^^^^^^^^^^

warning: unused 
import: 
`prekey::OneTimePrekey`
  --> zero-handshake\sr
c\x3dh.rs:23:40
   |
23 | use zero_identity:
:{bundle::KeyBundle, 
prekey::OneTimePrekey};
   |                   
                     
^^^^^^^^^^^^^^^^^^^^^

warning: unused 
import: `zero_identity:
:IdentityError`
  --> zero-handshake\sr
c\x3dh.rs:64:13
   |
64 |         use zero_i
dentity::IdentityError;
   |             ^^^^^^
^^^^^^^^^^^^^^^^^^^^^^

error[E0432]: 
unresolved import `zero
_crypto::kdf::hkdf`
  --> zero-ratchet\src\
state.rs:17:11
   |
17 |     kdf::{hkdf, 
hkdf_extract, 
hkdf_expand, 
KdfContext},
   |           ^^^^
   |           |
   |           no 
`hkdf` in `kdf`
   |           help: a 
similar name exists in 
the module: `Hkdf`

warning: unused 
import: `xor_distance`
 --> zero-dht\src\kbuck
et.rs:3:13
  |
3 | use 
crate::{xor_distance, 
NodeId};
  |             
^^^^^^^^^^^^
  |
  = note: `#[warn(unuse
d_imports)]` (part of 
`#[warn(unused)]`) on 
by default

warning: unused 
import: `ed25519_sign`
  --> zero-dht\src\node
_record.rs:12:46
   |
12 |     
sign::{Ed25519Keypair, 
Ed25519Signature, 
ed25519_sign, 
ed25519_verify, 
Ed25519PublicKey},
   |                   
                       
    ^^^^^^^^^^^^

warning: unused 
import: `K_BUCKET_SIZE`
 --> zero-dht\src\routi
ng_table.rs:4:34
  |
4 |     
kbucket::{KBucket, 
NodeInfo, 
K_BUCKET_SIZE},
  |                    
              
^^^^^^^^^^^^^

warning: unused 
import: `zero_crypto::a
ead::AeadKey`
 --> zero-ratchet\src\s
kipped_keys.rs:9:5
  |
9 | use zero_crypto::ae
ad::AeadKey;
  |     ^^^^^^^^^^^^^^^
^^^^^^^^^^^
  |
  = note: `#[warn(unuse
d_imports)]` (part of 
`#[warn(unused)]`) on 
by default

warning: unused 
imports: 
`AEAD_KEY_SIZE`, 
`X25519SecretKey`, 
`hkdf_expand`, and 
`hkdf_extract`
  --> zero-ratchet\src\
state.rs:15:50
   |
15 |     
aead::{decrypt, 
encrypt, AeadKey, 
AeadNonce, 
AEAD_KEY_SIZE},
   |                   
                       
        ^^^^^^^^^^^^^
16 |     
dh::{X25519Keypair, 
X25519PublicKey, 
X25519SecretKey, 
x25519_diffie_hellman},
   |                   
                       
^^^^^^^^^^^^^^^
17 |     kdf::{hkdf, 
hkdf_extract, 
hkdf_expand, 
KdfContext},
   |                 
^^^^^^^^^^^^  
^^^^^^^^^^^

warning: unused 
imports: 
`ZeroizeOnDrop` and 
`Zeroize`
  --> zero-ratchet\src\
state.rs:19:15
   |
19 | use 
zeroize::{Zeroize, 
ZeroizeOnDrop};
   |               
^^^^^^^  ^^^^^^^^^^^^^

error[E0277]: the 
trait bound 
`quinn::Incoming: 
Default` is not 
satisfied
  --> zero-transport\sr
c\quic.rs:38:24
   |
38 |         let 
incoming = 
Default::default(); // 
Stub
   |                   
     
^^^^^^^^^^^^^^^^^^ the 
trait `Default` is not 
implemented for 
`quinn::Incoming`

For more information 
about this error, try 
`rustc --explain 
E0277`.
warning: 
`zero-transport` (lib) 
generated 1 warning
error: could not 
compile 
`zero-transport` (lib) 
due to 1 previous 
error; 1 warning 
emitted
warning: build failed, 
waiting for other jobs 
to finish...
warning: unused 
variable: `re`
   --> zero-handshake\s
rc\noise.rs:276:13
    |
276 |         let re = 
self.remote_ephemeral.a
s_ref().unwrap().clone(
);
    |             ^^ 
help: if this is 
intentional, prefix it 
with an underscore: 
`_re`
    |
    = note: `#[warn(unu
sed_variables)]` (part 
of `#[warn(unused)]`) 
on by default

For more information 
about this error, try 
`rustc --explain 
E0432`.
warning: unused 
variable: `e`
  --> zero-ratchet\src\
error.rs:34:13
   |
34 |     fn from(e: zer
o_crypto::CryptoError) 
-> Self {
   |             ^ 
help: if this is 
intentional, prefix it 
with an underscore: 
`_e`
   |
   = note: `#[warn(unus
ed_variables)]` (part 
of `#[warn(unused)]`) 
on by default

warning: 
`zero-handshake` (lib) 
generated 7 warnings
error: could not 
compile 
`zero-handshake` (lib) 
due to 2 previous 
errors; 7 warnings 
emitted
warning: unused 
variable: `ckr`
   --> zero-ratchet\src
\state.rs:218:25
    |
218 |             if 
let Some(ref ckr) = 
self.ckr.clone() {
    |                  
       ^^^^^^^ help: 
if this is 
intentional, prefix it 
with an underscore: 
`_ckr`

warning: 
`zero-ratchet` (lib) 
generated 5 warnings
error: could not 
compile `zero-ratchet` 
(lib) due to 2 
previous errors; 5 
warnings emitted
warning: `zero-dht` 
(lib) generated 3 
warnings (run `cargo 
fix --lib -p zero-dht` 
to apply 3 suggestions)
